# onnx2torch

./: .gitignore  README.md  pyproject.toml
scripts/: download_models.py  test_models.py
src/onnx2fx/: __init__.py  cli.py  converter.py  fx_tracer.py  operators.py  validator.py
src/onnx2fx/quantization/: __init__.py  ptq.py  qft.py
src/onnx2fx/reports/: __init__.py
tests/: conftest.py  test_converter.py  test_operators.py  test_quantization.py  test_validator.py
